# StonedFenicsx

./: .gitignore  CACHING_OPPORTUNITIES.md  Documentation.md  Draft_input.md  HPC_read.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_REPORT_UPDATED.md  README.md  Random_documentation  ReadME.rst  Stoned_fenicx.py  TODO.md  benchmark.py  benchmark_td.py  example_Gmsh_dokken.py  example_setup.py  exp.msh  input.py  input.yaml  lithostatic_pressure_fenics.py  mesh.xdmf  mt.xdmf  pyproject.toml  pyproject_HPC.toml  pyproject_local.toml  random.py  requirement.txt  script_running.py  stoned_enviroment.yml  stoned_environment.yml  stonedfenicsx.toml  submit_stoned.sh  test.py
Debug_mesh/: Van_Keken.msh
ReadMe_figure/: Technical_documentation.run.xml  Technical_documentation.tex  bibliography.bib
StonedFenicsx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Stonedphoenix/: Random_documentation  Stoned_fenicx.py  input.py
docs/: Material_properties.md  Setup.md  bibliography.bib  conf.py  config_review.md  index.md  installation.md
example_conductivity/: Melting_parametrisation.py  Subducting_plate.py  heat_conductivity.py  velocity_jump_function.py
example_slab_surfaces/: Japan_slab.pz  Mexico_slab.pz  Tonga_slab.pz
examples/: Chile_slab.py  Japan_slab.py  Mexico_slab.py  Tonga_slab copy.py  Tonga_slab.py  input_tests.yaml  submit_stoned.sh
make_mesh/: Create_Mesh.py  Function_make_mesh.py  README  Subducting_plate.py  writing_geo_file.py
material_property/: phase_db.py
out_gmsh/: mesh_rank_0.h5  mesh_rank_0.xdmf
reading_mesh/: Mesh_c.py  (+2 more)
(+132 files in other folders)
