[project]
name = "StonedFenicsx"
version = "2026.0.1"
requires-python = ">=3.10,<3.14"

dependencies = [
    "numpy>=2.2,<2.3",
    "meshio>=5.3,<5.4",
    # Performance / numerics
    "numba>=0.61,<0.62",
    "scipy>=1.15,<1.16",
]
[project.urls]
Homepage = "https://github.com/APiccolo89/StonedFenicsx"