[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "StonedFenicsx"
version = "2026.0.1"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy==2.2.6",
    "scipy>=1.15",
    "gmsh==4.13.1",
    "pandas==3.0.3",
    "meshio==5.3.5",
    "numba==0.61.2",
    "pytest",
    "sphinx==9.0.0",
    "myst-parser",
    "pyyaml",
    "piccolo_theme",
    "sphinxcontrib-bibtex",
    "pyyaml==6.0.3",
    "h5py==3.12.1",
    "shapely==2.1.2", 
]

[project.urls]
Homepage = "https://github.com/APiccolo89/StonedFenicsx"

[tool.setuptools.packages.find]
include = ["stonedfenicsx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.spack]
python = "3.11"
mpi = true
petsc = true
dolfinx = true
h5py = true

# FOR HPC user
# -> Install the software, then load spack 
#spack load py-fenics-dolfinx
#python -m venv stoned_fenicsx
#source stoned_fenicsx/bin/activate
#pip install --no-deps -e .
